--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "redux-thunk": "^2.3.0",
     "sequelize": "^4.38.0",
     "socket.io": "^2.1.1",
+    "toastr": "^2.1.4",
     "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
